# clickhouse-tutorial

./: .env.example  .gitignore  CODEBASE_EXPLAINED.md  CODEBASE_EXPLAINED_v2.md  Makefile  README.md  docker-compose.yml  quick-setup.md
data-models/: 00_architecture_overview.md  01_postgresql_source.md  02_hdfs_raw_layer.md  03_hdfs_silver_layer.md  04_clickhouse_star_schema.md
docs/: 01-architecture.md  02-merge-tree-engines.md  03-advanced-engines.md  04-materialized-views.md  05-query-optimization.md
docs/hdfs/: 01-architecture.md  02-blocks-and-replication.md  03-read-write-paths.md  04-high-availability.md  05-federation-and-cli.md
docs/liquibase/: 01-what-and-why.md  02-core-concepts.md  03-execution-flow.md  04-project-implementation.md
hadoop-config/: hdfs-site.xml
liquibase/: liquibase.properties
liquibase/changelogs/: 001_create_user_tiers.yaml  002_create_users.yaml  003_create_devices.yaml  004_create_app_versions.yaml  005_create_screens.yaml  006_create_event_types.yaml  007_create_sessions.yaml  008_create_events.yaml  009_create_user_devices.yaml  db.changelog-master.yaml
python/: .dockerignore  Dockerfile  main.py  pyproject.toml
python/src/clickhouse_fundamentals/: __init__.py  config.py
python/src/clickhouse_fundamentals.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/clickhouse_fundamentals/db/: client.py  pg_client.py  pg_repository.py  repository.py
python/src/clickhouse_fundamentals/etl/: __init__.py  parquet_to_star.py  pg_to_parquet.py  pg_to_raw.py  raw_to_silver.py
python/src/clickhouse_fundamentals/generators/: app_interaction_generator.py  transaction_generator.py
python/src/clickhouse_fundamentals/hdfs/: __init__.py  client.py
python/src/clickhouse_fundamentals/models/: app_interaction.py  payment_metric.py  transaction.py
python/src/clickhouse_fundamentals/readers/: __init__.py  analytics_reader.py  app_interaction_reader.py
python/tests/: conftest.py  test_client.py  test_config.py  test_generator.py  test_repository.py  test_transaction.py
sql/: 01_create_tables.sql  02_partitioning_and_keys.sql  03_replacing_merge_tree.sql  04_aggregating_merge_tree.sql  05_materialized_views.sql  06_projections.sql  07_ttl_and_compression.sql  08_analytical_queries.sql
sql_star/: 01_dim_tables.sql  02_fact_table.sql  03_star_queries.sql
