# ==============================================================================
# ClickHouse Fundamentals — Python Project Configuration
# ==============================================================================

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "clickhouse-fundamentals"
version = "0.1.0"
description = "ClickHouse fundamentals bootcamp project"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect",
    "pandas",
    "faker",
    "python-dotenv",
    "tabulate",
    "pydantic",
    "psycopg2-binary>=2.9",
    "pyarrow>=14.0",
    "hdfs>=2.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pandas-stubs",
    "types-tabulate",
]

# ==============================================================================
# RUFF — Linting & Formatting
# ==============================================================================

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 88
exclude = ["build"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ==============================================================================
# MYPY — Type Checking
# ==============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
exclude = ["build/"]

# Ignore missing stubs for third-party libraries without type hints
[[tool.mypy.overrides]]
module = [
    "clickhouse_connect",
    "clickhouse_connect.*",
    "faker",
    "faker.*",
    "psycopg2",
    "psycopg2.*",
    "hdfs",
    "hdfs.*",
    "pyarrow",
    "pyarrow.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ==============================================================================
# PYTEST — Testing
# ==============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
